# runware-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: community_model.py  curated_model.py  stream.py  utilities.py
runware/: __init__.py  _docs_cache.py  _schemas_version.py  client.py  config.py  constants.py  content.py  errors.py  logger.py  registry.py  stream.py  validate.py
runware/transport/: rest.py  websocket.py
runware/types/: content.py  sdk.py  stream.py  task_map.py  transport.py
runware/utils/: file.py  retry.py
scripts/: bump_schemas.sh  generate_types.py
tests/: _mocks.py  test_client.py  test_config.py  test_content.py  test_contract.py  test_errors.py  test_file_encoding.py  test_generated_types.py  test_logger.py  test_registry.py  test_rest_polling.py  test_retry.py  test_stream.py  test_sync_delivery.py  test_text_stream.py  test_transport_edge_cases.py  test_validate.py  test_websocket.py  test_ws_async_polling.py
tests/integration/: test_smoke.py
