[project]
name = "runware-sdk"
version = "1.3.4"
description = "Async Python SDK for the Runware platform — image, video, audio, text, and 3D generation, plus upscaling, background removal, and more, over REST or WebSocket with typed parameters and runtime validation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Runware", email = "support@runware.ai" }]
keywords = [
    "runware",
    "ai",
    "sdk",
    "image-generation",
    "video-generation",
    "audio-generation",
    "text-generation",
    "inference",
    "generative-ai",
    "stable-diffusion",
    "flux",
    "websocket",
    "async",
    "asyncio",
    "llm",
    "streaming",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.10",
    "websockets>=13",
    "fastjsonschema>=2.20",
]

[project.urls]
Homepage = "https://runware.ai"
Documentation = "https://runware.ai/docs"
Repository = "https://github.com/runware/runware-python"
Issues = "https://github.com/runware/runware-python/issues"
Changelog = "https://github.com/runware/runware-python/releases"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pyright>=1.1.380",
    "aioresponses>=0.7",
    "basedpyright>=1.39.6",
]

[build-system]
requires = ["uv_build>=0.5,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "runware"
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W", "F",
    "I",
    "B",
    "UP",
    "ASYNC",
    "C4",
    "SIM",
    "RUF",
    "N",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["B", "SIM"]
"examples/**/*" = ["T201"]

[tool.pyright]
include = ["runware", "tests", "scripts"]
exclude = ["**/__pycache__"]
pythonVersion = "3.11"
strict = ["runware"]
reportMissingImports = "error"
reportMissingTypeStubs = "warning"

# Tests use unittest.mock which produces Any cascades by design (every
# MagicMock attribute is Any), and they legitimately reach into the SDK's
# `_private` members. Scripts parse arbitrary JSON Schema where Any is honest.
# Production code under `strict = ["runware"]` still enforces these.
#
# `reportAny` and `reportExplicitAny` are basedpyright-only rules. Vanilla
# pyright emits a stderr line per occurrence ("unrecognized setting") but the
# type check itself still completes cleanly (the trailing
# "0 errors, 0 warnings, 0 informations" is the real result). We can't split
# the configs: basedpyright refuses to load if both `[tool.pyright]` and
# `[tool.basedpyright]` exist, and current basedpyright won't pick up a
# `basedpyrightconfig.json` when pyproject.toml is also present.
[[tool.pyright.executionEnvironments]]
root = "runware"
# The SDK deliberately fires off side-effectful awaits and Set/dict mutations
# (asyncio.wait_for, set.discard, ctx-manager __aenter__, etc.) without
# binding the return. Prefixing every such call with `_ =` would be noise;
# leave the rule off here so meaningful warnings stand out.
reportUnusedCallResult = "none"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportAny = "none"
reportExplicitAny = "none"
reportPrivateUsage = "none"
# Tests deliberately discard the result of awaited helpers and frequently
# import private symbols from the SDK to exercise internals — neither is a
# defect in test code.
reportUnusedCallResult = "none"
reportPrivateLocalImportUsage = "none"
# Test fixtures often define hooks (`__call__`, `__repr__`, etc.) on mock
# objects without inheriting them — the override notation is unnecessary
# ceremony for throwaway stand-ins.
reportImplicitOverride = "none"
# Unused parameters in test stubs and mock callbacks document the contract
# without exercising the slot.
reportUnusedParameter = "none"
# Mock classes set instance attrs dynamically (`m.ok = True`) without a
# `@final` decorator — the `: bool` annotation noise isn't useful in test
# scaffolding.
reportUnannotatedClassAttribute = "none"
# `pytest.approx`, MagicMock attribute access, and dict literal types in
# tests legitimately surface as "partially unknown" — these aren't real
# defects in test code.
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
# Test helper modules (`tests._mocks`) don't ship a `py.typed` marker — they
# live alongside the tests that consume them.
reportMissingTypeStubs = "none"
# Test helpers are sometimes defined upfront and exercised conditionally.
reportUnusedFunction = "none"

[[tool.pyright.executionEnvironments]]
root = "scripts"
reportAny = "none"
reportExplicitAny = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:websockets.*",
    # aiohttp leaves SSL transports unclosed for a tick after session shutdown
    # under asyncio's selector loop; cosmetic, not a real leak.
    "ignore::ResourceWarning",
    "ignore:.*unclosed transport.*:pytest.PytestUnraisableExceptionWarning",
    "ignore:.*Exception ignored while finalizing socket.*:pytest.PytestUnraisableExceptionWarning",
]
